--- a/jersey-restful/src/main/webapp/WEB-INF/web.xml
+++ b/jersey-restful/src/main/webapp/WEB-INF/web.xml
@@ -3,16 +3,21 @@
      see implementation details http://jersey.java.net/nonav/documentation/latest/jax-rs.html -->
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <servlet>
-        <servlet-name>Jersey Web Application</servlet-name>
+        <servlet-name>Daq Web Notice Application</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
-            <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>com.daishuhua</param-value>
+            <param-name>javax.ws.rs.Application</param-name>
+            <param-value>com.daishuhua.myapp.MyApplication</param-value>
         </init-param>
+        <init-param>
+            <param-name>jersey.config.server.mvc.templateBasePath.mustache</param-name>
+            <param-value>mustache</param-value>
+        </init-param>
+
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Jersey Web Application</servlet-name>
-        <url-pattern>/webapi/*</url-pattern>
+        <servlet-name>Daq Web Notice Application</servlet-name>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 </web-app>
